# DrawPrize-RS

./: LICENSE  README.md
rust-src/: .env  Cargo.toml  Dockerfile  Dockerfile_simple  config.yaml  db.sqlite
rust-src/api/: Cargo.toml
rust-src/api/src/: lib.rs  routes.rs
rust-src/api/src/controller/: auth_controller.rs  cdk_controller.rs  health.rs  index.rs  live_prize_pool_controller.rs  live_prize_pool_item_controller.rs  mod.rs  prize_draw_history_controller.rs  prize_pool_controller.rs  prize_pool_item_controller.rs  resource_controller.rs  role_controller.rs  user_controller.rs
rust-src/common/: Cargo.toml
rust-src/common/src/: config.rs  error.rs  lib.rs  page.rs  r.rs  seder_conf.rs  state.rs
rust-src/entity/: Cargo.toml
rust-src/entity/src/: cdk.rs  live_prize_history.rs  live_prize_pool.rs  live_prize_pool_item.rs  live_prize_pool_item_cdk.rs  live_prize_pool_user.rs  mod.rs  prelude.rs  prize_pool.rs  prize_pool_item.rs  resource.rs  role.rs  role_resource.rs  user.rs  user_role.rs
rust-src/migration/: Cargo.toml
rust-src/migration/src/: lib.rs  m20220101_000001_create_table.rs  (+19 more)
rust-src/model/: Cargo.toml
rust-src/security/: Cargo.toml
rust-src/security/src/: bcrypt.rs  header.rs  jwt.rs  lib.rs  main.rs  state.rs  wtt.rs
rust-src/service/: Cargo.toml
rust-src/service/src/: auth_service.rs  cdk_service.rs  draw_history_service.rs  email_service.rs  lib.rs  live_prize_pool_item_service.rs  live_prize_pool_service.rs  prize_pool_item_service.rs  prize_pool_service.rs  resource_service.rs  role_service.rs  user_service.rs
rust-src/service/src/manager/: cdk_manager.rs  live_prize_history_manager.rs  live_prize_pool_item_cdk_manager.rs  live_prize_pool_item_manager.rs  live_prize_pool_manager.rs  live_prize_pool_user_manager.rs  mod.rs  prize_pool_item_manager.rs  prize_pool_manager.rs  resource_manager.rs  role_manager.rs  user_manager.rs
rust-src/static/: home.html  index.html
web/: next.config.js  package.json  tsconfig.json
web/src/: routes.ts
(+109 files in other folders)
