[package]
name = "security"
version = "0.1.0"
edition = "2021"

[lib]
name = "security"
path = "src/lib.rs"

[dependencies]
log = "0.4.22"
env_logger = "0.11.3"
actix-web = "4.7.0"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
once_cell = "1.8.0"
bcrypt = "0.15.1"
moka = { version = "0.12.7", features = ["sync"] }
common = { path = "../common" }
regex = "1.10.5"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]