[package]
name = "service"
version = "0.1.0"
edition = "2021"

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
log = "0.4.22"
env_logger = "0.11.3"
actix-web = "4.7.0"
sea-orm = { version = "0.12" }
entity = { path = "../entity" }
common = { path = "../common" }
security = { path = "../security" }
model = { path = "../model" }
chrono = "0.4.38"
uuid = { version = "1.9.1", features = ["v4"] }
captcha = "0.0.9"
serde_json = "1.0.120"
lettre = "0.11.7"